--- a/RP4_W_2.Rmd
+++ b/RP4_W_2.Rmd
@@ -103,4 +103,70 @@ hierarchical data format
 
 groups containing zero or more data sets and metadata
 
+datasets multidimensional array of data elements with metadata
+
+www.hdfgroup.org
+
+```{r}
+install.packages("biocLite")
+source("http://bioconductor.org/biocLite.R")
+biocLite("rhdf5")
+
+library(rhdf5)
+created = h5createFile("example.h5")
+created
+
+created = h5createGroup("example.h5", "foo")
+created = h5createGroup("example.h5", "baa")
+created = h5createGroup("exmaple.h5", "foo/foobaa")
+
+h5ls("example.h5") #lists the groups created
+
+A = matrix(1:10, nr = 5, nc = 2)
+h5write(A, "example.h5", "foo/A")
+
+B = array(seq(0.1, 2.0, by = 0.1), dim = c(5,2,2))
+
+attr(B, "scale") <- "liter"
+
+h5write(B, "example.h5", "foo/foobaa/B")
+
+h5ls("example.h5")
+
+df = data.frame(1L:5L, seq(0, 1, length.out = 5), c("ab", "cde", "fghi", "a", "s"), stringsAsFactors = FALSE)
+
+h5write(df, "example.h5", "df")
+h5ls("example.h5")
+
+
+readA = h5read("example.h5", "foo/A")
+readB = h5read("example.h5", "foo/foobaa/B")
+readf = h5read("example.h5", "df")
+readA
+
+h5write(c(12,13,14), "example.h5", "foo/A", index = list(1:3, 1))
+h5read("example.h5", "foo/A")
+
+
+```
+
+rhdf5 tutorial on bioconductor
+
+
+## READING FROM THE WEB
+
+scraping data out of websites, and APIs, and authentications
+
+webscraping: programatically extracting data from the HTML code of websites
+
+attempting to read too many pages too quickly can get your IP address blocked
+
+http://scholar.google.com/citations?user=HI-I6C0AAAAJ&hl=en
+
+```{r}
+con = url("https://scholar.google.com/citations?user=HI-I6C0AAAAJ&hl=en
+")
+
+htmlCode = readLines(con)
+```
 
