--- a/RP4_W_3.Rmd
+++ b/RP4_W_3.Rmd
@@ -695,3 +695,313 @@ gives the average download size depending on the data in the size varuable
 
 
 mutate(cran3, size_mb = size / 2^20)
+
+
+
+# Swirl - Grouping and Chaining with dplyr
+
+tbl_df() - data frame tbl format
+
+group_by() function
+
+# 1. count = n()
+# 2. unique = n_distinct(ip_id)
+# 3. countries = n_distinct(country)
+# 4. avg_bytes = mean(size)
+
+
+
+pack_sum <- summarize(by_package,
+                      count = n(),
+                      unique = n_distinct(ip_id),
+                      countries = n_distinct(country),
+                      avg_bytes = mean(size) )
+                      
+                      
+determining quantiles:
+
+quantile(pack_sum$count, probs = 0.99)
+
+#679.56
+top_counts <- filter(pack_sum, count > 679)
+
+
+View(top_counts) #shows the full df in a seperate tab.
+
+
+#Piping method(chaining)
+
+| Chaining allows you to string together multiple function calls in a way that is compact and readable, while still
+| accomplishing the desired result. To make it more concrete, let's compute our last popularity metric from scratch,
+| starting with our original data.
+
+OPERATOR : %>%
+
+## %>%
+
+cran %>%
+  select(ip_id, country, package, size) %>%
+	print
+	
+	
+	
+cran %>%
+  select(ip_id, country, package, size) %>%
+  mutate(size_mb = size / 2^20) %>%
+  filter(size_mb <= 0.5) %>%
+          arrange(desc(size_mb)) %>%
+                print
+
+# Tidying data with tidyr
+
+gather()
+
+separate()
+
+
+tidyr package
+
+http://vita.had.co.nz/papers/tidy-data.pdf
+
+must-read
+
+
+***Common examples of messy data***
+
+1: Column headers are values, not variable names
+2: Variables are stored in both rows and columns
+3: A single observational unit is stored in multiple tables
+4: Multiple types of observational units are stored in the same table
+5: Multiple variables are stored in one column
+
+  grade male female
+1     A    1      5
+2     B    5      0
+3     C    5      2
+4     D    5      5
+5     E    7      4
+
+| This dataset actually has three variables: grade, sex, and count. The first variable, grade, is already a column, so
+| that should remain as it is. The second variable, sex, is captured by the second and third column headings. The third
+| variable, count, is the number of students for each combination of grade and sex.
+
+| To tidy the students data, we need to have one column for each of these three variables. We'll use the gather()
+| function from tidyr to accomplish this. Pull up the documentation for this function with ?gather.
+
+gather(students, sex, count, -grade)
+
+   grade    sex count
+1      A   male     1
+2      B   male     5
+3      C   male     5
+4      D   male     5
+5      E   male     7
+6      A female     5
+7      B female     0
+8      C female     2
+9      D female     5
+10     E female     4
+
+
+
+ students2
+  grade male_1 female_1 male_2 female_2
+1     A      3        4      3        4
+2     B      6        4      3        5
+3     C      7        4      3        8
+4     D      4        0      8        1
+5     E      1        1      2        7
+
+
+ |==============================                                                                                |  27%
+| This dataset is similar to the first, except now there are two separate classes, 1 and 2, and we have total counts
+| for each sex within each class. students2 suffers from the same messy data problem of having column headers that are
+| values (male_1, female_1, etc.) and not variable names (sex, class, and count).
+
+| Let's start by using gather() to stack the columns of students2, like we just did with students. This time, name the
+| 'key' column sex_class and the 'value' column count. Save the result to a new variable called res. Consult ?gather
+| again if you need help.
+
+res <- gather(students2, sex_class, count, -grade)
+
+   grade sex_class count
+1      A    male_1     3
+2      B    male_1     6
+3      C    male_1     7
+4      D    male_1     4
+5      E    male_1     1
+6      A  female_1     4
+7      B  female_1     4
+8      C  female_1     4
+9      D  female_1     0
+10     E  female_1     1
+11     A    male_2     3
+12     B    male_2     3
+13     C    male_2     3
+14     D    male_2     8
+15     E    male_2     2
+16     A  female_2     4
+17     B  female_2     5
+18     C  female_2     8
+19     D  female_2     1
+20     E  female_2     7
+
+separate(res, col = sex_class, into = c("sex", "class"))
+
+   grade    sex class count
+1      A   male     1     3
+2      B   male     1     6
+3      C   male     1     7
+4      D   male     1     4
+5      E   male     1     1
+6      A female     1     4
+7      B female     1     4
+8      C female     1     4
+9      D female     1     0
+10     E female     1     1
+11     A   male     2     3
+12     B   male     2     3
+13     C   male     2     3
+14     D   male     2     8
+15     E   male     2     2
+16     A female     2     4
+17     B female     2     5
+18     C female     2     8
+19     D female     2     1
+20     E female     2     7
+
+
+if seperate cannot figure out on its own how to separate the sex_class column, 
+you have to indicate with 'sep' argument. it splits on non-alphanumeric values. 
+it assumes that the values are separated by something othe than a letter or 
+number. in this case, an underscore
+
+
+#When variables are stored in both rows and columns
+
+    name    test class1 class2 class3 class4 class5
+1  Sally midterm      A   <NA>      B   <NA>   <NA>
+2  Sally   final      C   <NA>      C   <NA>   <NA>
+3   Jeff midterm   <NA>      D   <NA>      A   <NA>
+4   Jeff   final   <NA>      E   <NA>      C   <NA>
+5  Roger midterm   <NA>      C   <NA>   <NA>      B
+6  Roger   final   <NA>      A   <NA>   <NA>      A
+7  Karen midterm   <NA>   <NA>      C      A   <NA>
+8  Karen   final   <NA>   <NA>      C      A   <NA>
+9  Brian midterm      B   <NA>   <NA>   <NA>      A
+10 Brian   final      B   <NA>   <NA>   <NA>      C
+
+| The first variable, name, is already a column and should remain as it is. The headers of the last five columns,
+| class1 through class5, are all different values of what should be a class variable. The values in the test column,
+| midterm and final, should each be its own variable containing the respective grades for each student.
+
+students3 %>%
+  gather(key = class , value = grade, class1:class5 , na.rm= TRUE) %>%
+  print
+
+    name    test  class grade
+1  Sally midterm class1     A
+2  Sally   final class1     C
+9  Brian midterm class1     B
+10 Brian   final class1     B
+13  Jeff midterm class2     D
+14  Jeff   final class2     E
+15 Roger midterm class2     C
+16 Roger   final class2     A
+21 Sally midterm class3     B
+22 Sally   final class3     C
+27 Karen midterm class3     C
+28 Karen   final class3     C
+33  Jeff midterm class4     A
+34  Jeff   final class4     C
+37 Karen midterm class4     A
+38 Karen   final class4     A
+45 Roger midterm class5     B
+46 Roger   final class5     A
+49 Brian midterm class5     A
+50 Brian   final class5     C
+
+
+students3 %>%
+  gather(class, grade, class1:class5, na.rm = TRUE) %>%
+  spread(test, grade) %>%
+  print
+  
+    name  class final midterm
+1  Brian class1     B       B
+2  Brian class5     C       A
+3   Jeff class2     E       D
+4   Jeff class4     C       A
+5  Karen class3     C       C
+6  Karen class4     A       A
+7  Roger class2     A       C
+8  Roger class5     A       B
+9  Sally class1     C       A
+10 Sally class3     C       B
+
+
+
+
+#readr is required for certain data manipulations, such as parse_number()
+
+
+
+students3 %>%
+  gather(class, grade, class1:class5, na.rm = TRUE) %>%
+  spread(test, grade) %>%
+  mutate(class = parse_number(class)) %>%
+  print
+
+
+    name class final midterm
+1  Brian     1     B       B
+2  Brian     5     C       A
+3   Jeff     2     E       D
+4   Jeff     4     C       A
+5  Karen     3     C       C
+6  Karen     4     A       A
+7  Roger     2     A       C
+8  Roger     5     A       B
+9  Sally     1     C       A
+10 Sally     3     C       B
+
+
+in these instances, you break the table into two different tables.
+
+   id  name sex
+1 168 Brian   F
+3 588 Sally   M
+5 710  Jeff   M
+7 731 Roger   F
+9 908 Karen   M
+
+and
+
+
+    id  name sex class midterm final
+1  168 Brian   F     1       B     B
+2  168 Brian   F     5       A     C
+3  588 Sally   M     1       A     C
+4  588 Sally   M     3       B     C
+5  710  Jeff   M     2       D     E
+6  710  Jeff   M     4       A     C
+7  731 Roger   F     2       C     A
+8  731 Roger   F     5       B     A
+9  908 Karen   M     3       C     C
+10 908 Karen   M     4       A     A
+
+
+and id is your 'primary key' which connects the tables
+
+
+sat %>%
+  select(-contains("total")) %>%
+  gather(part_sex, count, -score_range) %>%
+  separate(part_sex, c("part", "sex")) %>%
+  group_by(part, sex) %>%
+  mutate(total = sum(count),
+         prop = count/total
+  ) %>% print
+
+#mind == blown
+
